[package]
name = "core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive", "rc"] }
thiserror = "1.0.38"
tracing = "0.1.37"
serde_json = "1.0"


[dependencies.icrate]
version = "*"
features = ["AppKit", "AppKit_all"]
