[package]
name = "heimdall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dirs = "4.0.0"
global-hotkey = "0.1.2"
serde = "1.0.152"
serde_json = "1.0.93"
toml = "0.7.2"
winit = "0.28.2"

[dependencies.clap]
version = "4.1.8"
features = ["derive"]
