[package]
name = "heimdall"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "heim"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dirs = "4.0.0"
global-hotkey = "0.1.2"
serde = "1.0.152"
serde_json = "1.0.93"
toml = "0.7.2"
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
winit = { version = "0.28.2", default-features = false }

[dependencies.clap]
version = "4.1.8"
features = ["derive"]
